--- a/src/app/sharepage/footer/footer.component.html
+++ b/src/app/sharepage/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <!-- name -->
         <div class="col-lg-6 mt-3 mb-3">
-            <h1>Food-blog</h1>
+            <h1>Wake & Bite</h1>
             <p>GOOD FOOD MAKES A GOOD!!</p>
         </div>
         <!-- nav -->
@@ -14,10 +14,10 @@
         </div>
         <!-- Social media -->
         <div class="col-lg-2 mt-3 mb-3">
-            <a href="#" target="_blank"><i class="bi bi-facebook"></i></a>
-            <a href="#" target="_blank"><i class="bi bi-whatsapp"></i></a>
-            <a href="#" target="_blank"><i class="bi bi-twitter"></i></a>
-            <a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
+            <a href="https:/www.whatsapp.com" target="_blank"><i class="bi bi-whatsapp"></i></a>
+            <a href="https:/www.twitter.com" target="_blank"><i class="bi bi-twitter"></i></a>
+            <a href="https:/www.instagram.com" target="_blank"><i class="bi bi-instagram"></i></a>
         </div>
     </div>
 </div>
