--- a/src/app/pages/menu/menu.component.css
+++ b/src/app/pages/menu/menu.component.css
@@ -1,27 +1,63 @@
-.foodbox{
-    padding: 10px 5px;
+.foodbox {
+  padding: 10px 5px;
 }
 
-.foodbox img{
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-    border-radius: 5px;
+h1 {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100ch;
+  height: 10%;
 }
 
-.foodbox h1{
-    font-size: 20px;
-    margin-top: 20px;
-    font-weight: bold;
+.menu-banner {
+  font-weight: bold;
+  background-color: var(--primary-color);
+  border-radius: 10px;
+  margin-bottom: 30px;
 }
 
-.buybtn{
-    color: #000;
-    background-color: var(--primary-color);
-    padding: 10px 10px;
-    text-decoration: none;
-    font-size: 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-weight: bold;
+.menu-banner p {
+  text-align: center;
+  font-size: 30px;
+  color: black;
+  width: 100%;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
+
+.foodbox img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 15px;
+  transition: transform 0.3s ease;
+}
+
+.foodbox img:hover {
+  opacity: 0.7;
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.foodbox h1 {
+  font-size: 20px;
+  margin-top: 20px;
+  font-weight: bold;
+}
+
+
+
+.buybtn {
+  color: #000;
+  background-color: var(--primary-color);
+  padding: 10px 10px;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+
