--- a/src/app/pages/menupage/menupage.component.html
+++ b/src/app/pages/menupage/menupage.component.html
@@ -1,20 +1,69 @@
 <div class="container">
-    <div class="row">
-        <div class="col-lg-6" *ngIf="menuData">
-            <a routerLink="../../menu" class="btn btn-sm btn-dark mb-3">Back</a>
-            <img src="{{menuData[0].foodImg}}" width="100%">
-            <h1 class="mt-3">{{menuData[0].foodName}}</h1>
-            <p>{{menuData[0].foodDetails}}</p>
-            <p>{{menuData[0].foodPrice | currency:'INR'}}</p>
-        </div>
-        <div class="col-lg-6">
-            <h1>Enter your Details</h1>
-            <form>
-                <input type="text" class="form-control" placeholder="Enter your Name">
-                <input type="text" class="form-control" placeholder="Enter your Mobile">
-                <textarea class="form-control" placeholder="Enter your address"></textarea>
-                <button class="btn btn-md btn-dark mt-3">Place Order</button>
-            </form>
-        </div>
+  <div class="row">
+    <div class="col-lg-6" *ngIf="specData">
+      <a routerLink="../../menu" class="btn btn-sm btn-dark mb-3">Back</a>
+      <img src="{{ specData.foodImg }}" width="100%" />
+      <h1 class="mt-3">{{ specData.foodName }}</h1>
+      <p>{{ specData.foodDetails }}</p>
+      <p>{{ specData.foodPrice | currency : "INR" }}</p>
     </div>
+
+    <div class="col-lg-6 mt-5">
+      <h1>Enter your Details</h1>
+      <form [formGroup]="porderForm" (submit)="onSubmit()">
+        <div class="place_order_data">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Enter your Name"
+            formControlName="pusername"
+            name="pusername"
+          />
+          <span
+            style="color: red"
+            *ngIf="pusername && pusername.invalid && pusername.touched"
+            >Please fill the valid name</span
+          >
+        </div>
+        <div class="place_order_data">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Enter your valid number"
+            formControlName="pusermob"
+            name="pusermob"
+          />
+          <span
+            style="color: red"
+            *ngIf="pusermob && pusermob.invalid && pusermob.touched"
+            >Please enter valid number</span
+          >
+        </div>
+        <div class="place_order_data">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Enter your address"
+            formControlName="puseradd"
+            name="puseradd"
+          />
+          <span
+            style="color: red"
+            *ngIf="puseradd && puseradd.invalid && puseradd.touched"
+            >Please fill the valid address</span
+          >
+        </div>
+
+        <div class="submit">
+          <button
+            [disabled]="!porderForm.valid"
+            type="submit"
+            (ngSubmit)="onSubmit()"
+          >
+            Place Order
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
