--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -38,7 +38,7 @@
       </div>
       <!--Submit-->
       <div class="col-lg-12 mt-2 mb-2">
-        <button [disabled]="loginForm.invalid" class="btn btn-md btn-dark" (click)="downloadForm()"
+        <button [disabled]="loginForm.invalid" class="btn btn-md btn-dark"
           (ngSubmit)="onSubmit()" type="submit">Send</button>
       </div>
     </div>
