--- a/src/app/pages/successpage/successpage.component.html
+++ b/src/app/pages/successpage/successpage.component.html
@@ -1,7 +1,14 @@
-<div class="card">
-  <div style="border-radius:200px; height:200px; width:200px; background: #F8FAF5; margin:0 auto;">
-    <i class="checkmark">✓</i>
+<div class="container mt-5 text-center">
+  <div class="card">
+    <div class="back-circle">
+      <i class="checkmark"> ✓ </i>
+    </div>
+    <div class="details_success">
+      <h1 class="text-center">Your details are Submitted</h1>
+      <p class="text-center">
+        We received your purchase request;<br />
+        we'll be in touch shortly!
+      </p>
+    </div>
   </div>
-    <h1>Your details are Submitted</h1>
-    <p>We received your purchase request;<br/> we'll be in touch shortly!</p>
-  </div>
+</div>
