--- a/src/app/pages/successpage/successpage.component.css
+++ b/src/app/pages/successpage/successpage.component.css
@@ -1,29 +1,32 @@
-body {
-  text-align: center;
-  padding: 40px 0;
-  background: #EBF0F5;
-  align-content: center;
-
+h1 {
+  color: #88b04b;
+  font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
+  font-weight: 900;
+  font-size: 40px;
+  margin-bottom: 10px;
 }
-  h1 {
-    color: #88B04B;
-    font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
-    font-weight: 900;
-    font-size: 40px;
-    margin-bottom: 10px;
-  }
-  p {
-    color: #404F5E;
-    font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
-    font-size:20px;
-    margin: 0;
-  }
-i {
+
+p {
+  color: #404f5e;
+  font-family: "Nunito Sans", "Helvetica Neue", sans-serif;
+  font-size: 20px;
+  margin: 0;
+}
+
+.back-circle {
+  border-radius: 200px;
+  height: 200px;
+  width: 200px;
+  background: #f8faf5;
+  margin: 0 auto;
+}
+
+i{
   color: #9ABC66;
   font-size: 100px;
   line-height: 200px;
-  margin-left:-15px;
 }
+
 .card {
   background: white;
   padding: 60px;
@@ -31,10 +34,4 @@ i {
   box-shadow: 0 2px 3px #C8D0D8;
   display: inline-block;
   margin: 0 auto;
-  margin-left: 25%;
-  margin-top: 15px;
-}
-
-.checkmark{
-  margin-left: 25%;
 }
